--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/vision": "^0.24.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "nodemailer": "^4.7.0",
