se agrega el controlador de las funciones de https

--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^0.24.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "nodemailer": "^4.7.0",
